crates/pvm-storage/tests/ui/storage_typed_view_blocks_mutation.stderr
warning: variable does not need to be mutable
  --> tests/ui/storage_typed_view_blocks_mutation.rs:23:13
   |
23 |         let mut inner = self.by_addr.view(&addr);
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow data in dereference of `pvm_storage::Ref<'_, Lazy<Uint<256, 4>>>` as mutable
  --> tests/ui/storage_typed_view_blocks_mutation.rs:24:9
   |
24 |         inner.set(&U256::from(9999));
   |         ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `pvm_storage::Ref<'_, Lazy<Uint<256, 4>>>`
